:recycle: アセット表現を整理
