# crates/domain/src/entity/music.rs
@@ -1,7 +1,7 @@
 use chrono::{DateTime, Utc};
 use getset::{Getters, Setters};
 
-use super::genre::Genre;
+use super::{asset::Asset, genre::Genre};
 
 #[derive(Debug, Getters, Setters)]
 pub struct Music {
@@ -16,13 +16,9 @@ pub struct Music {
     #[getset(get = "pub")]
     genre: Genre,
     #[getset(get = "pub")]
-    jacket_key: Option<String>,
+    jacket: Option<Asset>,
     #[getset(get = "pub")]
-    music_key: Option<String>,
-    #[getset(get = "pub", set = "pub")]
-    jacket_updated_at: Option<DateTime<Utc>>,
-    #[getset(get = "pub", set = "pub")]
-    music_updated_at: Option<DateTime<Utc>>,
+    audio: Option<Asset>,
     #[getset(get = "pub")]
     registration_date: DateTime<Utc>,
     #[getset(get = "pub")]
@@ -37,8 +33,6 @@ impl Music {
         artist: String,
         bpm: f32,
         genre: Genre,
-        jacket_key: Option<String>,
-        music_key: Option<String>,
         registration_date: DateTime<Utc>,
         is_test: bool,
     ) -> Self {
@@ -48,10 +42,33 @@ impl Music {
             artist,
             bpm,
             genre,
-            jacket_key,
-            music_key,
-            jacket_updated_at: None,
-            music_updated_at: None,
+            jacket: None,
+            audio: None,
+            registration_date,
+            is_test,
+        }
+    }
+
+    #[allow(clippy::too_many_arguments)]
+    pub fn with_assets(
+        id: String,
+        title: String,
+        artist: String,
+        bpm: f32,
+        genre: Genre,
+        jacket: Option<Asset>,
+        audio: Option<Asset>,
+        registration_date: DateTime<Utc>,
+        is_test: bool,
+    ) -> Self {
+        Self {
+            id,
+            title,
+            artist,
+            bpm,
+            genre,
+            jacket,
+            audio,
             registration_date,
             is_test,
         }
