# crates/domain/src/entity/sheet.rs
@@ -1,7 +1,6 @@
-use chrono::{DateTime, Utc};
 use getset::{Getters, Setters};
 
-use super::{difficulty::Difficulty, level::Level};
+use super::{asset::Asset, difficulty::Difficulty, level::Level};
 
 #[derive(Debug, Getters, Setters)]
 pub struct Sheet {
@@ -16,9 +15,7 @@ pub struct Sheet {
     #[getset(get = "pub")]
     notes_designer: String,
     #[getset(get = "pub")]
-    chart_key: Option<String>,
-    #[getset(get = "pub", set = "pub")]
-    chart_updated_at: Option<DateTime<Utc>>,
+    chart: Option<Asset>,
 }
 
 impl Sheet {
@@ -28,7 +25,6 @@ impl Sheet {
         difficulty: Difficulty,
         level: Level,
         notes_designer: String,
-        chart_key: Option<String>,
     ) -> Self {
         Self {
             id,
@@ -36,8 +32,25 @@ impl Sheet {
             difficulty,
             level,
             notes_designer,
-            chart_key,
-            chart_updated_at: None,
+            chart: None,
+        }
+    }
+
+    pub fn with_chart(
+        id: String,
+        music_id: String,
+        difficulty: Difficulty,
+        level: Level,
+        notes_designer: String,
+        chart: Option<Asset>,
+    ) -> Self {
+        Self {
+            id,
+            music_id,
+            difficulty,
+            level,
+            notes_designer,
+            chart,
         }
     }
 }
